--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,5 @@ script:
     sudo make USE_PGXS=1 ENABLE_GCOV=1 install
     bash -x test.sh
 after_success:
-  - coveralls --gcov-options '\-lr'
+    - gcov --version
+    - coveralls --gcov-options '\-lr'
